feat: splitting driver handlers out for lambda deployment
