# src/schemas/zodSchemas.ts
@@ -5,7 +5,6 @@ const NewUser = z
   .object({
     name: z.string().min(1).max(100),
     email: z.string().email(),
-    password: z.string().min(8),
     phone: z.string().regex(/^\+?[1-9]\d{1,14}$|^\d{3}-\d{3}-\d{4}$/),
     address: z.string(),
   })
@@ -32,7 +31,6 @@ const Error = z
 const UpdateUser = z
   .object({
     name: z.string().min(1).max(100),
-    password: z.string().min(8),
     phone: z.string().regex(/^\+?[1-9]\d{1,14}$|^\d{3}-\d{3}-\d{4}$/),
     address: z.string(),
   })
@@ -43,7 +41,6 @@ const NewDriver = z
   .object({
     name: z.string().min(1).max(100),
     email: z.string().email(),
-    password: z.string().min(8),
     phone: z.string().regex(/^\+?[1-9]\d{1,14}$|^\d{3}-\d{3}-\d{4}$/),
     address: z.string(),
     vehicleMake: z.string(),
@@ -71,7 +68,6 @@ const Driver = z
 const UpdateDriver = z
   .object({
     name: z.string().min(1).max(100),
-    password: z.string().min(8),
     phone: z.string().regex(/^\+?[1-9]\d{1,14}$|^\d{3}-\d{3}-\d{4}$/),
     address: z.string(),
     vehicleMake: z.string(),
